2006-04-28  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c, dm_imaputil.c, test-scripts/testimap.py:
	beware of double-quotes in email-addresses
	* Makefile.am, check_dbmail_deliver.c, check_dbmail_misc.c:
	move tests from check_dbmail_misc.c to check_dbmail_deliver.c and remove
	check_dbmail_misc.c
	* dm_imaputil.c, modules/Makefile.am, modules/authldap.c, 
	  test-scripts/testimap.py:
	escape the subject before quoting in envelope response (closes: #279)

2006-04-24  Paul J Stevens <paul@nfg.nl>

	* dm_imaputil.c, test-scripts/testimap.py:
	fix double quoting in ENVELOPE response (closes: #329)
	* debian/control:
	update mysql build dependancy
	* misc.c:
	provide fallback for internaldate where %z is not provided

2006-04-24  Aaron Stone  <aaron@serendipity.cx>

	* configure.in, acinclude.m4, Makefile.am:
	Added latest getopt.m4 from Gnulib that will activate USE_DM_GETOPT
	on systems with an unfriendly getopt (closes half of bug #331).
	Added USE_DM_GETOPT flags to conditionally build gm_getopt.c.
	* misc.h, misc.c:
	Zapped two unused functions dm_valid_folder, dm_strip_folder.
	* pipe.c:
	valid_sender avoids strcasestr (closes the other half of bug #331).

2006-04-21  Paul J Stevens <paul@nfg.nl>

	* config.c, dbmail.h.in, imapd.c, lmtpd.c, modules/authldap.c, pop3d.c, 
	  timsieved.c:
	fix creation of pid files (closes: #327)
	* db.c, modules/authldap.c:
	auto-create shadow user and inbox for ldap-authenticated users

2006-04-18  Aaron Stone  <aaron@serendipity.cx>

	* modules/dbmysql.c:
	Set the current connection's collation to match the database. Prevents
	"Illegal mix of collations" errors as MySQL switches to UTF8 by default.

2006-04-18  Paul J Stevens <paul@nfg.nl>

	* Makefile.am, dbmail.h.in, forward.c, forward.h, modules/sortsieve.c, 
	  pipe.c, pipe.h:
	applying aarons fix for popen/pipe delivery (fixes: #325)
	* serverchild.c:
	catch failed forks
	* db.c, dbmail-message.c:
	add some db_free_result calls (kaname) (closes: #324)