@@ -18,6 +18,7 @@ Hans Kristian Rosbach	hk at isphuset dot no
 Javier Carlos		javier at nediam dot com dot mx
 Jesse Norrel		jesse at kci dot net
 Leif Jackson		ljackson at jjcons dot com
+Matthew Sayler		sayler at speedsite.com
 Paul F De La Cruz	polito at blackbeanie dot net
 Paul J Stevens		paul at nfg dot nl
 Ryan Butler		rbutler at adiis dot net
