@@ -1,3 +1,10 @@
+2006-04-29  Paul J Stevens <paul@nfg.nl>
+
+	* THANKS:
+	add Matthew Sayler to THANKS
+	* dm_imaputil.c, test-scripts/testimap.py:
+	collapse address lists in envelope response
+
 2006-04-28  Paul J Stevens <paul@nfg.nl>
 
 	* dbmail-mailbox.c, dm_imaputil.c, test-scripts/testimap.py:
